grammar/NFA.g4
/** 
 * Gramática para el lenguaje de especificación de un NFA 
 * Este lenguaje hace referencia a la tupla de 5 elementos que define un NFA:
 *          NFA = (Q,Σ,R,q0,F)
 * Donde:
 *  - Q  -> Conjunto finito de estados
 *  - Σ  -> Conjunto finito de carácteres (Alfabeto)
 *  - R  -> Conjunto finito de las transiciones entre estados
 *  - q0 -> Estado inicial
 *  - F  -> Conjunto finito de estados de aceptación o finales
 *
 * Requerimientos:
 *  - El nombre de los estados (STATE) tiene que tener mínimo dos carácteres para diferenciarse de los elementos (CHAR) del alfabeto
 *  - La tupla del NFA tiene que ser de la siguiente forma para ser aceptada:
 *          NFA = ({q0, q1...}, {c0, c1...), {(qi, ci) = {qi, qy...}...}, qi, {qi, qy...}
 */
grammar NFA;

init : '(' '{' states '}' ',' '{' alphabet '}' ',' '{' relations '}' ',' STATE ',' '{' states '}' ')';

states : STATE ',' states
       | STATE
       ;

alphabet : CHAR ',' alphabet
         | CHAR
         ;

relations : relations ',' relations
          | '(' STATE ',' CHAR ')' '=' '{' states '}'
          | '(' STATE ',' CHAR ')' '=' '{' '}'
          ; 

STATE : [a-zA-Z0-9][a-zA-Z0-9]+;
CHAR : [a-zA-Z0-9];

WS : [ \t\r\n]+ -> skip;
